--- a/style.css
+++ b/style.css
@@ -727,7 +727,7 @@
   }
   #hero-1785 .cs-title,
   #hero-1785 .cs-text {
-    color: #fff;
+    color: #ffffff;
   }
   #hero-1785 .cs-text {
     margin-bottom: 2rem;
@@ -840,6 +840,13 @@
   }
 }
                                 
+
+
+
+
+
+
+
 
 
 
@@ -989,208 +996,7 @@
 
 
 
-                                
-
-
-/*-- -------------------------- -->
-<---         Collection         -->
-<--- -------------------------- -*/
-
-/* Mobile - 360px */
-@media only screen and (min-width: 0rem) {
-  #collection-1552 {
-    padding: var(--sectionPadding);
-    padding-top: 8rem;
-
-  }
-  #collection-1552 .cs-container {
-    width: 100%;
-    /* changes to 1280px at tablet */
-    max-width: 34.375rem;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  #collection-1552 .cs-card-group {
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-  }
-  #collection-1552 .cs-item {
-    max-width: 100%;
-    height: 43vw;
-    /* removed at tablet */
-    max-height: 15.625rem;
-    /* 56px - 84px */
-    padding: clamp(3.5rem, 7vw, 5.25rem) 1.5rem;
-    box-sizing: border-box;
-    display: flex;
-    grid-column: span 12;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-  }
-  #collection-1552 .cs-item:hover .cs-background img {
-    opacity: .5;
-    transform: scale(1.4);
-  }
-  #collection-1552 .cs-item-offer {
-    max-height: 100%;
-    height: auto;
-    /* 40px - 80px top & bottom, 24px - 40px sides*/
-    padding: clamp(2.5rem, 8vw, 5rem) clamp(1.5rem, 4vw, 2.5rem);
-    align-items: flex-end;
-  }
-  #collection-1552 .cs-item-offer:hover {
-    /* prevents the first images from having a hover effect, its not necessary */
-  }
-  #collection-1552 .cs-item-offer:hover .cs-background img {
-    opacity: 1;
-    transform: scale(1);
-  }
-  #collection-1552 .cs-offer-tag {
-    font-size: 0.8125rem;
-    font-weight: 700;
-    line-height: 1.2em;
-    text-transform: uppercase;
-    width: fit-content;
-    margin-bottom: 0.5rem;
-    padding: 0.25rem 0.5rem;
-    color: #f7f7f7;
-    background-color: var(--secondary);
-    display: block;
-  }
-  #collection-1552 .cs-text-wrapper {
-    /* 150px - 265px */
-    max-width: clamp(9.375rem, 20vw, 16.5625rem);
-  }
-  #collection-1552 .cs-h3 {
-    font-size: var(--headerFontSize);
-    font-weight: 900;
-    line-height: 1.2em;
-    max-width: 20ch;
-    margin: 0 0 0.25rem;
-    color: var(--headerColor);
-  }
-  #collection-1552 .cs-item-text {
-    font-size: 1rem;
-    line-height: 1.5em;
-    color: var(--bodyTextColor);
-    display: block;
-  }
-  #collection-1552 .cs-button-solid {
-    font-size: 1rem;
-    font-weight: 700;
-    /* 46px - 56px */
-    line-height: clamp(2.875rem, 5.5vw, 3.5rem);
-    text-align: center;
-    text-decoration: none;
-    min-width: 9.375rem;
-    margin: 1rem 0 0;
-    /* prevents padding from adding to the width */
-    box-sizing: border-box;
-    padding: 0 1.5rem;
-    color: #fff;
-    background-color: var(--primary);
-    display: inline-block;
-    position: relative;
-    z-index: 1;
-  }
-  #collection-1552 .cs-button-solid:before {
-    content: "";
-    width: 0%;
-    height: 100%;
-    background: #000;
-    opacity: 1;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: width 0.3s;
-  }
-  #collection-1552 .cs-button-solid:hover:before {
-    width: 100%;
-  }
-  #collection-1552 .cs-background {
-    width: 100%;
-    height: 100%;
-    background-color: #000;
-    overflow: hidden;
-    position: absolute;
-    top: 0;
-    left: 0;
-    /* set to -2 so the gradient overlay (z-index: -1) appears in front of the images, but behind the text */
-    z-index: -2;
-  }
-  #collection-1552 .cs-background img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transition: opacity .3s, transform .6s;
-  }
-  #collection-1552 .cs-category {
-    font-size: 1.25rem;
-    font-weight: 700;
-    line-height: 1.2em;
-    text-align: center;
-    text-decoration: none;
-    width: fit-content;
-    /* 12px - 20px top & bottom, 16px - 24px sides*/
-    padding: clamp(0.75rem, 2vw, 1.25rem) clamp(1rem, 3vw, 1.5rem);
-    color: var(--bodyTextColorWhite);
-    position: relative;
-    transition: background-color 0.3s, color 0.3s;
-    /* blurred background - done as a pseudo element so backdrop-filter won't distort the text */
-  }
-  #collection-1552 .cs-category:hover {
-    background-color: #ffffff;
-    color: var(--headerColor);
-  }
-  #collection-1552 .cs-category::before {
-    content: "";
-    width: 100%;
-    height: 100%;
-    backdrop-filter: blur(8px);
-    --webkit-backdrop-filter: blur(8px);
-    background-color: rgba(255, 255, 255, 0.2);
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-  }
-}
-/* Tablet - 768px */
-@media only screen and (min-width: 48rem) {
-  #collection-1552 .cs-container {
-    max-width: 80rem;
-  }
-  #collection-1552 .cs-item {
-    /* 188px - 348px */
-    min-height: clamp(11.75rem, 27vw, 21.75rem);
-    grid-column: span 3;
-  }
-  #collection-1552 .cs-item-offer {
-    grid-column: span 6;
-    grid-row: span 2;
-  }
-}
-                                
-
-
-
-
-
-
-
-
-
-
-
-
+ 
 
 
 
@@ -1510,6 +1316,320 @@
 
 
 
+
+/*-- -------------------------- -->
+<---          Contact           -->
+<--- -------------------------- -*/
+
+/* Mobile - 360px */
+@media only screen and (min-width: 0rem) {
+  #contact-2320 {
+    padding: var(--sectionPadding);
+    padding-top: 8rem;
+    display: flex;
+    flex-direction: column;
+    /* 48px - 64px */
+    gap: clamp(3rem, 6vw, 4rem);
+    position: relative;
+    z-index: 1;
+  }
+  #contact-2320 .cs-container {
+    width: 100%;
+    /* changes to 1280px at desktop */
+    max-width: 36.25rem;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    /* 48px - 64px */
+    gap: clamp(3rem, 6vw, 4rem);
+  }
+  #contact-2320 .cs-container2 {
+    width: 100%;
+    /* changes to 1280px at desktop */
+    max-width: 36.25rem;
+    padding: 5rem 3rem;
+    margin: auto;
+    position: relative;
+    z-index: 1;
+  }
+  #contact-2320 .cs-container2 .cs-topper {
+    color: #fff;
+  }
+  #contact-2320 .cs-content {
+    text-align: left;
+  }
+  #contact-2320 .cs-title {
+    margin-bottom: 2rem;
+  }
+  #contact-2320 .cs-form {
+    border-radius: 1rem;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 0.75rem;
+  }
+  #contact-2320 .cs-label {
+    /* 14px - 16px */
+    font-size: clamp(0.875rem, 1.5vw, 1rem);
+    width: 100%;
+    color: var(--headerColor);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 0.25rem;
+  }
+  #contact-2320 .cs-input {
+    font-size: 1rem;
+    width: 100%;
+    height: 3.5rem;
+    padding: 0;
+    padding-left: 1.5rem;
+    color: var(--headerColor);
+    background-color: #f7f7f7;
+    border: none;
+    /* prevents padding from adding to height and width */
+    box-sizing: border-box;
+  }
+  #contact-2320 .cs-input::placeholder {
+    color: #7d799c;
+    opacity: 0.6;
+  }
+  #contact-2320 .cs-textarea {
+    min-height: 7.5rem;
+    padding-top: 1.5rem;
+    margin-bottom: 0.75rem;
+    font-family: inherit;
+  }
+  #contact-2320 .cs-button-solid {
+    font-size: 1rem;
+    /* 46px - 56px */
+    line-height: clamp(2.875rem, 5.5vw, 3.5rem);
+    text-decoration: none;
+    font-weight: 700;
+    text-align: center;
+    margin: 0;
+    color: #fff;
+    padding: 0 1.5rem;
+    background-color: var(--primary);
+    display: inline-block;
+    position: relative;
+    z-index: 1;
+    /* prevents padding from adding to the width */
+    box-sizing: border-box;
+  }
+  #contact-2320 .cs-button-solid:before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 0%;
+    background: #000;
+    opacity: 1;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    border-radius: 0.25rem;
+    transition: width 0.3s;
+  }
+  #contact-2320 .cs-button-solid:hover:before {
+    width: 100%;
+  }
+  #contact-2320 .cs-submit {
+    text-transform: uppercase;
+    background-color: var(--secondaryLight);
+    color: var(--headerColor);
+    border: none;
+    transition: color 0.3s;
+  }
+  #contact-2320 .cs-submit:hover {
+    cursor: pointer;
+    color: #fff;
+  }
+  #contact-2320 .cs-map {
+    width: 100%;
+    max-width: 39.375rem;
+    height: 25rem;
+    position: relative;
+    z-index: 1;
+    display: block;
+  }
+  #contact-2320 .cs-iframe-wrapper {
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    /* 40px - 56px */
+    bottom: clamp(2.5rem, 5vw, 3.5rem);
+  }
+  #contact-2320 .cs-iframe-wrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
+  #contact-2320 .cs-box {
+    width: 90%;
+    max-width: 28.125rem;
+    /* 16px - 32px top & bottom */
+    /* 16px left & right */
+    padding: clamp(1rem, 3vw, 2rem) clamp(1rem, 2.4vw, 1rem);
+    background-color: #fff;
+    display: flex;
+    align-items: flex-start;
+    gap: 0.5rem;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 100;
+  }
+  #contact-2320 .cs-box:before {
+    content: '';
+    width: 100%;
+    height: 100%;
+    background: var(--primary);
+    pointer-events: none;
+    opacity: 0.1;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
+  #contact-2320 .cs-icon {
+    width: 2rem;
+    height: auto;
+    display: block;
+  }
+  #contact-2320 .cs-flex {
+    display: flex;
+    flex-direction: column;
+  }
+  #contact-2320 .cs-header {
+    font-size: 1.25rem;
+    font-weight: 700;
+    line-height: 1.2em;
+    margin: 0 0 0.5rem;
+    color: var(--headerColor);
+  }
+  #contact-2320 .cs-address {
+    font-size: clamp(0.75rem, 2.8vw, 1rem);
+    line-height: 1.5em;
+    margin: 0;
+    color: var(--bodyTextColor);
+  }
+  #contact-2320 .cs-hours {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  #contact-2320 .cs-hours-info {
+    /* 20px - 25px */
+    font-size: clamp(1.25rem, 3vw, 1.5625rem);
+    line-height: 1.2em;
+    font-weight: 700;
+    width: 60%;
+    max-width: 28ch;
+    margin: 0;
+    color: var(--bodyTextColorWhite);
+  }
+  #contact-2320 .cs-background {
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
+  #contact-2320 .cs-background:before {
+    /* background color overlay */
+    content: '';
+    position: absolute;
+    display: block;
+    height: 100%;
+    width: 100%;
+    background: #000;
+    opacity: 0.72;
+    top: 0;
+    left: 0;
+    z-index: 1;
+  }
+  #contact-2320 .cs-background img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    /* Makes img tag act as a background image */
+    object-fit: cover;
+  }
+}
+/* Small Desktop - 1024px */
+@media only screen and (min-width: 64rem) {
+  #contact-2320 .cs-container {
+    max-width: 80rem;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: stretch;
+    gap: 3.25rem;
+  }
+  #contact-2320 .cs-container2 {
+    max-width: 80rem;
+  }
+  #contact-2320 .cs-content {
+    max-width: 32.625rem;
+    /* 24px - 80px */
+    padding: clamp(2rem, 5vw, 5rem) 0;
+  }
+  #contact-2320 .cs-title,
+  #contact-2320 .cs-topper,
+  #contact-2320 .cs-text {
+    text-align: left;
+    margin-left: 0;
+  }
+  #contact-2320 .cs-title {
+    max-width: 32.625rem;
+  }
+  #contact-2320 .cs-services,
+  #contact-2320 .cs-phone {
+    width: 47%;
+  }
+  #contact-2320 .cs-button-solid {
+    margin-left: 0;
+  }
+  #contact-2320 .cs-map {
+    max-width: 39.375rem;
+    height: auto;
+    order: -1;
+  }
+}
+                                
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*-- -------------------------- -->
 <---          Footer            -->
 <--- -------------------------- -*/
@@ -1667,4 +1787,69 @@
     }
 }
 
-                                
+               
+
+
+.merienda {
+  font-family: "Merienda", cursive;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+body {
+  font-family: "Merienda", cursive;
+}
+.merienda {
+  font-family: "Merienda", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+
+
+
+
+
+
+
+
+
+
+/* back-to-top 默认隐藏 */
+#back-to-top {
+  position: fixed;
+  bottom: 2rem;        /* 距离底部 */
+  right: 2rem;         /* 改成靠右 */
+  /* 去掉 left */
+  left: auto;
+  
+  display: none;       /* 默认隐藏，滚动时再显示 */
+  width: 3rem;
+  height: 3rem;
+  background: var(--primary); /* 自己定义的主色 */
+  color: #fff;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5rem;
+  text-decoration: none;
+  z-index: 999;
+  transition: opacity 0.3s;
+  opacity: 0;
+}
+
+/* 鼠标悬停效果（可选） */
+#back-to-top:hover {
+  opacity: 1;
+}
+
+/* 当页面滚动超过一定距离时，显示按钮 */
+#back-to-top.show {
+  display: flex;
+  opacity: 0.8;
+}
+
+
+
+
+
